<?xml version="1.0"?>
<package format="2">
  <name>tiny_tf</name>
  <version>0.9.7</version>
  <description>Shameless reimplementation of some parts of the API from Tully Foote's TF library</description>

  <maintainer email="safijari@isu.edu">Jariullah Safi</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>python-numpy</exec_depend>

  <export>
      <!-- <build_type>ament_python</build_type> -->
  </export>
</package>
