<?xml version="1.0"?>
<package format="3">
  <name>tiny_tf</name>
  <version>1.0.1</version>
  <description>Shameless reimplementation of some parts of the API from Tully Foote's TF library</description>

  <maintainer email="safijari@isu.edu">Jariullah Safi</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>python-numpy</exec_depend>

  <export>
      <build_type condition="$ROS_VERSION == 1">cmake</build_type>
      <build_type condition="$ROS_VERSION == 2">ament_python</build_type>
  </export>
</package>
